--- a/sections/img-text.liquid
+++ b/sections/img-text.liquid
@@ -1,20 +1,82 @@
 <section class="section-wrapper-{{ section.id }}">
-    
+  {% for block in section.blocks %}
+    {% case block.type %}
+      {% when 'image' %}
+      <div class="image-div-{{ block.id }}">
+        <img src="{{ block.settings.image_with_text_image | img_url:"master" }}">
+      </div>
+      {% when 'text-block' %}
+        {{ block.settings.caption }}
+
+        {% when 'spacer-block' %}
+      <div class="spacer-{{ block.id }}">
+
+      </div>
+    {% endcase %}
+  {% endfor %}
 </section>
 
 <style>
-
+  .section-wrapper-{{ section.id }} {
+    width: {{ section.settings.section-width }}px;
+    margin: 0 auto; 
+  }
+  {% for block in section.blocks %}
+    {% case block.type %}
+      {% when 'image' %}
+      .section-wrapper-{{ section.id }} .image-div-{{ block.id }} {
+        text-align: center;
+      }
+      .section-wrapper-{{ section.id }} .image-div-{{ block.id }} img {
+        width: {{ block.settings.image-size }}px;
+      }
+      {% when 'spacer-block' %}
+      .section-wrapper-{{ section.id }} .spacer-{{ block.id }}{
+        height: {{ block.settings.spacer-height }}px;
+      }
+      {% when 'text-block' %}
+        .section-wrapper-{{ section.id }} p {
+        font-size: {{ block.settings.font-size }}px;
+        font-family: {{ block.settings.heading-font }};
+        text-align: {{ block.settings.text_alignment }};
+      }
+    {% endcase %}
+  {% endfor %}
 </style>
 
 {% schema %}
   {
-    "name": "Image With Text",
+    "name": "Image And Caption",
+    "settings": [
+      {
+            "type": "select",
+            "id": "section-width",
+            "label": "Section Width",
+            "options": [
+              {
+                "value": "600",
+                "label": "Small"
+              }, {
+                "value": "967",
+                "label": "Medium"
+              }, {
+                "value": "1200",
+                "label": "Large"
+              }
+            ],
+            "default": "600"
+          }
+    ],
     "blocks": [
       {
-        "name": "image",
+        "name": "Image",
         "type": "image",
         "settings": [
           {
+            "type": "image_picker",
+            "id": "image_with_text_image",
+            "label": "Image"
+          }, {
             "type": "select",
             "id": "image-size",
             "label": "Image Size",
@@ -33,11 +95,68 @@
             "default": "600"
           }
         ]
+      }, 
+      {
+        "type": "spacer-block",
+        "name": "Spacer",
+        "settings": [
+          {
+            "type": "range",
+            "id": "spacer-height",
+            "label": "Spacer Height",
+            "min": 0,
+            "max": 200,
+            "step": 5,
+            "unit": "px",
+            "default": 30
+          }
+        ]
+      }, 
+      {
+        "name": "text-block",
+        "type": "text-block",
+        "settings": [
+          {
+            "type": "richtext",
+            "id": "caption",
+            "label": "Caption"
+          }, {
+            "type": "font",
+            "id": "heading-font",
+            "label": "Heading Font"
+          }, {
+            "type": "range",
+            "id": "font-size",
+            "label": "Font Size",
+            "min": 12,
+            "max": 60,
+            "step": 2,
+            "unit": "px",
+            "default": 20
+          }, {
+            "type": "select",
+            "id": "text_alignment",
+            "label": "Align Text",
+            "options": [
+              {
+                "value": "left",
+                "label": "Left"
+              }, {
+                "value": "center",
+                "label": "Center"
+              }, {
+                "value": "right",
+                "label": "Right"
+              }
+            ],
+            "default": "center"
+          }
+        ]
       }
     ],
     "presets": [
       {
-        "name": "Image With Text"
+        "name": "Image And Caption"
       }
     ]
   }
