--- a/sections/img-caption.liquid
+++ b/sections/img-caption.liquid
@@ -47,6 +47,7 @@
 {% schema %}
   {
     "name": "Image And Caption",
+    "tag": "section",
     "settings": [
       {
             "type": "select",
